add pr, minor fixes

--- a/index.html
+++ b/index.html
@@ -161,6 +161,19 @@
             <li><strong>Color-coded:</strong> Each Category 1 program has its own color family</li>
           </ul>
         </a>
+
+        <a href="sankey_pr.html" class="chart-card">
+          <h2>Permanent Residents (PR)</h2>
+          <p>
+            Visualizes admissions of Permanent Residents by Province/Territory and Immigration Category with three hierarchical levels. Filter by province/territory and year to explore the data.
+          </p>
+          <ul class="features">
+            <li><strong>3-level hierarchy:</strong> Category 1 → Category 2 → Category 3</li>
+            <li><strong>Programs include:</strong> Economic, Sponsored Family, Resettled Refugees & Protected Persons, and more</li>
+            <li><strong>Interactive filtering:</strong> By province/territory and year</li>
+            <li><strong>Color-coded:</strong> Each Category 1 program has its own color family</li>
+          </ul>
+        </a>
       </div>
     </div>
     
