--- a/sankey_tfw.html
+++ b/sankey_tfw.html
@@ -112,6 +112,7 @@
     <a href="index.html">← Home</a>
     <a href="sankey_imp.html">IMP Sankey</a>
     <a href="sankey_tfw.html" class="active">TFW Sankey</a>
+    <a href="sankey_pr.html">PR Sankey</a>
   </div>
   <h1>TFW Sankey — Province & Year Filters</h1>
   <div class="controls">
