--- a/sankey_imp.html
+++ b/sankey_imp.html
@@ -112,6 +112,7 @@
     <a href="index.html">← Home</a>
     <a href="sankey_imp.html" class="active">IMP Sankey</a>
     <a href="sankey_tfw.html">TFW Sankey</a>
+    <a href="sankey_pr.html">PR Sankey</a>
   </div>
   <h1>IMP Sankey — Province & Year Filters</h1>
   <div class="controls">
