add study, asylum

--- a/index.html
+++ b/index.html
@@ -174,6 +174,32 @@
             <li><strong>Color-coded:</strong> Each Category 1 program has its own color family</li>
           </ul>
         </a>
+
+        <a href="sankey_asylum.html" class="chart-card">
+          <h2>Asylum Claims (Claim Office Type)</h2>
+          <p>
+            Visualizes asylum claim counts by claim office type with a root-level Asylum node. Filter by province/territory and year to explore the distribution across Airport, Border, Inland, and other offices.
+          </p>
+          <ul class="features">
+            <li><strong>1-level hierarchy:</strong> Asylum → Claim Office Type</li>
+            <li><strong>Office types include:</strong> Airport, Border, Inland, Other Offices</li>
+            <li><strong>Interactive filtering:</strong> By province/territory and year</li>
+            <li><strong>Consistent UI:</strong> Same controls and navigation as other Sankeys</li>
+          </ul>
+        </a>
+
+        <a href="sankey_study.html" class="chart-card">
+          <h2>Study Permits (Study Level)</h2>
+          <p>
+            Visualizes temporary resident study permit holders by study level with a root-level Study node. Filter by province/territory and year to explore the distribution across different education levels.
+          </p>
+          <ul class="features">
+            <li><strong>1-level hierarchy:</strong> Study → Study Level</li>
+            <li><strong>Study levels include:</strong> Secondary or less, Post Secondary, Other Studies</li>
+            <li><strong>Interactive filtering:</strong> By province/territory and year</li>
+            <li><strong>Consistent UI:</strong> Same controls and navigation as other Sankeys</li>
+          </ul>
+        </a>
       </div>
     </div>
     
